--- a/release-notes.txt
+++ b/release-notes.txt
@@ -31,7 +31,8 @@ Activities sorted by application function.
 * Callboard
 	NONE
 * Communication
-	NONE
+	BUGFIX
+		Avoiding to take over breakspaces to shorttext
 * Ticket - new
 	NONE
 * Ticket - update
@@ -39,7 +40,11 @@ Activities sorted by application function.
 * Ticket - disposition print
 	CHANGE
 		Smaller line spacing
+	FEATURE
 		Attached table of assigned units with additional information instead of comma separated list
+	ISSUE
+		Network printing is limited to one page and is not available for free-form text
+		No support for line wrapping in network printing, longer text runs off the page
 * Ticket - report
 	NONE
 * Ticket - close
