--- a/release-notes.txt
+++ b/release-notes.txt
@@ -26,60 +26,86 @@ Activities sorted by application function.
 	CHANGE
 	CODE
 	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Situation
-	NONE
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Callboard
-	NONE
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Communication
 	BUGFIX
 		Avoiding to take over breakspaces to shorttext
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Ticket - new
-	NONE
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Ticket - update
-	NONE
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Ticket - disposition print
 	CHANGE
 		Smaller line spacing
 	FEATURE
 		Attached table of assigned units with additional information instead of comma separated list
+		Keyboard shortcuts for navigationbar buttons
 	ISSUE
 		Network printing is limited to one page and is not available for free-form text
 		No support for line wrapping in network printing, longer text runs off the page
 * Ticket - report
-	NONE
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Ticket - close
-	NONE
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Ticket - new action
-	NONE
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Ticket - update action
-	NONE
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Ticket - dispatch
-	NONE
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Ticket - disposition
-	NONE
-* Log report
-	NONE
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Units - overview
-	NONE
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Units - new
 	CHANGE
 		JS-Code for ajax submit
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Units - update
 	BUGFIX
 		Does not change unit if dispatched
 		Setting new printer if data-service textarea manually cleared
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Facilities - overview
-	NONE
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Facilities - new
 	CHANGE
 		JS-Code for ajax submit
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Facilities - update
 	CHANGE
 		JS-Code for ajax submit
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Reports
-	NONE
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Settings - overview
-	NONE
+	FEATURE
+		Keyboard shortcuts for navigationbar buttons
 * Settings - user accounts - User accounts
 	NONE
 * Settings - user accounts - own account
